Fixed overflow styling issue

--- a/src/styles/grid.module.css
+++ b/src/styles/grid.module.css
@@ -13,5 +13,5 @@
 }
 
 .patternRight {
-    left: 90vw;
+    right: 0;
 }
