--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -12,6 +12,10 @@ $border-radius: 0px;
     text-align: center;
 }
 
+.row {
+    margin: 0;
+}
+
 .slick-active {
     button {
         background: black !important;
